@startuml
skinparam classAttributeIconSize 0
skinparam CircledCharacterFontSize 0
skinparam CircledCharacterRadius 0
skinparam class {
    BackgroundColor White
    BorderColor Black
    ArrowColor Black
}

class "CourseManager" as CourseManager {
    - courseList : CourseList
    - courseStorage : CourseStorage
    + addCourse(courseCode : String) : String
    + deleteCourse(courseCode : String) : String
    + listCourses() : String
    + viewCourse(courseCode : String) : String
    + addAssessment(...) : String
    + recordScore(...) : String
    + deleteAssessment(...) : String
}

class "CourseList" as CourseList {
    - courses : ArrayList<Course>
    + add(course : Course) : void
    + remove(courseCode : String) : boolean
    + get(courseCode : String) : Course
    + contains(courseCode : String) : boolean
    + size() : int
}

class "Course" as Course {
    - courseCode : String
    - assessments : ArrayList<Assessment>
    + addAssessment(assessment : Assessment) : void
    + removeAssessment(name : String) : boolean
    + getAssessment(name : String) : Assessment
    + getTotalWeightage() : double
    + getTotalWeightedScore() : double
}

class "Assessment" as Assessment {
    - name : String
    - weightage : double
    - scoreObtained : double
    - maxScore : double
    + recordScore(score : double) : void
    + getWeightedScore() : double
    + isGraded() : boolean
}

CourseManager --> CourseList
CourseList --> "*" Course
Course --> "*" Assessment

@enduml
